# pyweb-hw-07

./: README.md  Script-7.sql  main.py  my_select.py  pyproject.toml  seeds.py
conf/: db.py  models.py
migrations/versions/: 4e0a2587ec06_init.py
