[tool.poetry]
name = "goit-pyweb-hw-07-seeds"
version = "0.1.0"
description = ""
authors = ["SvetlanaRomaniuk111 <gatskosv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
faker = "^33.1.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
